feat: 카테고리 조회(단건, 전체) 캐싱 적용